--- a/style.css
+++ b/style.css
@@ -60,5 +60,57 @@ h1{
     font-size: 3.5rem;
     padding: 0%;
     margin: 0%;
+    margin-top: 10px;
     text-align: center;
+}
+
+.button-div{
+    display: flex;
+    justify-content: center;
+}
+
+button{
+    font-family: "Pixelify Sans", sans-serif;
+    font-optical-sizing: auto;
+    font-style: normal;
+    font-size: 20px;
+
+    border-radius: 10px;
+    border: none;
+    padding: 15px;
+    background-color: green;
+    color: wheat; 
+
+    transition-duration: 0.1s;
+}
+
+button:hover{
+    transform: scale(1.04);
+}
+
+
+
+@media (min-width: 320px) and (max-width:767px){
+    h1{
+        font-size: 3rem;
+    }
+    .box{
+        width: 90px;
+        height: 90px;
+    }
+
+    .main-container{
+        margin-top: 90px;
+    }
+    .XO{
+        font-size: 3.5rem;
+    }
+    button{
+        padding: 9px;
+    }
+    .message{
+        margin-top: 30px;
+        margin-bottom: 10px;
+        font-size: 2.5rem;
+    }
 }
